added some functionality to the char counter script so that a new class is added to the counter when below zero. Also added styling for that new class

--- a/public/index.html
+++ b/public/index.html
@@ -59,7 +59,7 @@
             <textarea name="text" id="tweet-text"></textarea>
           </div>
           <div class="tweet-lower">
-            <button type="submit">Tweet</button>
+            <button id="button" type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
