--- a/public/index.html
+++ b/public/index.html
@@ -64,6 +64,9 @@
           </div>
         </form>
       </section>
+      <section class="tweets">
+        
+      </section>
     </main>
   </body>
 </html>
