added a new function in client.js that takes tweet data and returns a html article. Also changed some classes and id's to make it sync with the article styling

--- a/public/index.html
+++ b/public/index.html
@@ -65,14 +65,14 @@
           </div>
         </form>
       </section>
-      <section>
+      <section id="tweets-container">
         <article class="tweets">
           <header>
             <div id="tweet-header-right">
               <i class="fa-solid fa-user-astronaut"></i>
-              <h3 id="tweet-name">Newton</h3>
+              <h3 class="tweet-name">Newton</h3>
             </div>
-            <h3 id="tweet-tag">@SirIsaac</h3>
+            <h3 class="tweet-tag">@SirIsaac</h3>
           </header>
           <p>
             If I have seen further it is by standing on the shoulders of giants
