created an html element that contains error messages

--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,12 @@
     <!-- Page-specific (main) content here -->
     <main class="container">
       <section class="new-tweet">
+        <div class="error">
+          error message
+        </div>
+        <div class="validation">
+          validation message
+        </div>
         <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
           <div class="tweet-upper">
