Added a new button to the nav. Added some client side functionality for when the user clicks the button in order to display or hide new tweet

--- a/public/index.html
+++ b/public/index.html
@@ -35,8 +35,8 @@
     <!-- Top nav bar (fixed) -->
     <nav>
       <span>tweeter</span>
-      <div>
-        <div>Write a new tweet</div>
+      <div class="nav-right">
+        <button class="nav-buttons" type="button">Write a new tweet</button>
         <i class="fa-solid fa-angles-down"></i>
       </div>
     </nav>
