added a button that appears when the user has scrolled down from the top of the page. When clicked the button returns the user to the top of the screen and focusses them on the new tweet textarea

--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,9 @@
       </section>
       <section id="tweets-container">
       </section>
+      <div class="scroll">
+        <button type="button" id="scroll-to-top"><i class="fa-solid fa-angles-up"></i></button>
+      </div>
     </main>
   </body>
 </html>
