added responsivness for desktop screens. Changed the new tweet post to reset the text area and counter on successful submission

--- a/public/index.html
+++ b/public/index.html
@@ -43,12 +43,12 @@
     <header id="header-top">
       <div class="aligner">
         <div class="aligner-item aligner-item-top"></div>
-        <div class="aligner-item aligner-item-middle">
-            <img class="profile-pic" src="/images/profile-hex.png"> 
-        </div>
+
+        <img class="profile-pic" src="/images/profile-hex.png"> 
+
         <br>
         <div class="aligner-item aligner-item-bottom">
-            <h2>Your Name</h2>
+            <h2>Ray Charles</h2>
         </div>
       </div>
   </header>
@@ -62,7 +62,6 @@
         <div class="validation">
           validation message
         </div>
-        <h2>Compose Tweet</h2>
         <form method="POST" action="/tweets/">
           <div class="tweet-upper">
             <label for="tweet-text">What are you humming about?</label>
