cleaned up the css sheets by removing unused styles and ensuring specificity to reach target. Also fixed a bug in the char counter so that when users exceed 140 char and then go back under, the counter color resets to black

--- a/public/index.html
+++ b/public/index.html
@@ -64,8 +64,7 @@
         </div>
         <form method="POST" action="/tweets/">
           <div class="tweet-upper">
-            <label for="tweet-text">What are you humming about?</label>
-            <textarea name="text" id="tweet-text"></textarea>
+            <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           </div>
           <div class="tweet-lower">
             <button id="button" type="submit">Tweet</button>
